[package]
name = "memory-bus-8080"
version = "0.1.0"
authors = ["David Tyler <davet.code@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
rocket = "0.4.7"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]